--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-	<link type="text/css" rel="stylesheet" href="stylesheet2.css" >
+	<link type="text/css" rel="stylesheet" href="stylesheet.css" >
     <title>Filtrage Photos</title> 
   </head>
   
