--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ function changeVignette(idee)
 </script>
 <script>
 function telecharge(){
-	download("adr","telfile.jpg");
+	download(adr,"telfile.jpg");
 }
 </script>
 </body>
